--- a/QE/QE_bib.bib
+++ b/QE/QE_bib.bib
@@ -11,7 +11,6 @@ number = {5},
 pages = {e1001555},
 publisher = {Public Library of Science},
 title = {{The Geography of Recent Genetic Ancestry across Europe}},
-url = {https://dx.plos.org/10.1371/journal.pbio.1001555},
 volume = {11},
 year = {2013}
 }
@@ -28,7 +27,6 @@ number = {8},
 pages = {e1005436},
 publisher = {Public Library of Science},
 title = {{Dominance of Deleterious Alleles Controls the Response to a Population Bottleneck}},
-url = {http://dx.plos.org/10.1371/journal.pgen.1005436},
 volume = {11},
 year = {2015}
 }
@@ -42,7 +40,6 @@ month = {jun},
 pages = {059436},
 publisher = {Cold Spring Harbor Laboratory},
 title = {{A direct multi-generational estimate of the human mutation rate from autozygous segments seen in thousands of parentally related individuals}},
-url = {https://www.biorxiv.org/content/early/2016/06/17/059436},
 year = {2016}
 }
 @article{Campbell2012,
@@ -58,7 +55,6 @@ number = {11},
 pages = {1277--1281},
 publisher = {Nature Publishing Group},
 title = {{Estimating the human mutation rate using autozygosity in a founder population}},
-url = {http://www.nature.com/articles/ng.2418},
 volume = {44},
 year = {2012}
 }
@@ -74,7 +70,6 @@ number = {4},
 pages = {505--511},
 publisher = {Wiley-Blackwell},
 title = {{Genetic genealogy comes of age: Perspectives on the use of deep-rooted pedigrees in human population genetics}},
-url = {http://doi.wiley.com/10.1002/ajpa.22233},
 volume = {150},
 year = {2013}
 }
@@ -91,7 +86,6 @@ number = {6},
 pages = {e65507},
 publisher = {Public Library of Science},
 title = {{Native American Admixture in the Quebec Founder Population}},
-url = {https://dx.plos.org/10.1371/journal.pone.0065507},
 volume = {8},
 year = {2013}
 }
@@ -107,7 +101,6 @@ number = {3},
 pages = {432--441},
 publisher = {John Wiley {\&} Sons, Ltd},
 title = {{Admixed ancestry and stratification of Quebec regional populations}},
-url = {http://doi.wiley.com/10.1002/ajpa.21424},
 volume = {144},
 year = {2011}
 }
@@ -122,7 +115,6 @@ number = {5},
 pages = {521--531},
 publisher = {Springer-Verlag},
 title = {{Genomic and genealogical investigation of the French Canadian founder population structure}},
-url = {http://link.springer.com/10.1007/s00439-010-0945-x},
 volume = {129},
 year = {2011}
 }
@@ -138,7 +130,6 @@ number = {1},
 pages = {30--41},
 publisher = {Wiley-Blackwell},
 title = {{Fragmentation of the Quebec population genetic pool (Canada): Evidence from the genetic contribution of founders per region in the 17th and 18th centuries}},
-url = {http://doi.wiley.com/10.1002/1096-8644{\%}28200101{\%}29114{\%}3A1{\%}3C30{\%}3A{\%}3AAID-AJPA1003{\%}3E3.0.CO{\%}3B2-L},
 volume = {114},
 year = {2001}
 }
@@ -153,7 +144,6 @@ pages = {970--8},
 pmid = {7717408},
 publisher = {Elsevier},
 title = {{Variability of the genetic contribution of Quebec population founders associated to some deleterious genes.}},
-url = {http://www.ncbi.nlm.nih.gov/pubmed/7717408 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC1801195},
 volume = {56},
 year = {1995}
 }
@@ -169,7 +159,6 @@ number = {4},
 pages = {287--301},
 publisher = {John Wiley {\&} Sons, Ltd},
 title = {{Population history and its impact on medical genetics in Quebec}},
-url = {http://doi.wiley.com/10.1111/j.1399-0004.2005.00497.x},
 volume = {68},
 year = {2005}
 }
@@ -184,7 +173,6 @@ month = {dec},
 pages = {1--8},
 publisher = {Elsevier Current Trends},
 title = {{Something old, something borrowed: admixture and adaptation in human evolution}},
-url = {https://www.sciencedirect.com/science/article/pii/S0959437X17301855},
 volume = {53},
 year = {2018}
 }
@@ -199,7 +187,6 @@ month = {dec},
 pages = {21--27},
 publisher = {Elsevier Current Trends},
 title = {{The evolutionary history of human populations in Europe}},
-url = {https://www.sciencedirect.com/science/article/pii/S0959437X18300583},
 volume = {53},
 year = {2018}
 }
@@ -214,7 +201,6 @@ month = {dec},
 pages = {28--35},
 publisher = {Elsevier Current Trends},
 title = {{Genetic and evolutionary determinants of human population variation in immune responses}},
-url = {https://www.sciencedirect.com/science/article/pii/S0959437X18300807},
 volume = {53},
 year = {2018}
 }
@@ -229,7 +215,6 @@ month = {dec},
 pages = {140--147},
 publisher = {Elsevier Current Trends},
 title = {{Genomic inference using diffusion models and the allele frequency spectrum}},
-url = {https://www.sciencedirect.com/science/article/pii/S0959437X18300819},
 volume = {53},
 year = {2018}
 }
@@ -245,7 +230,6 @@ pages = {eaav2621},
 pmid = {30409807},
 publisher = {American Association for the Advancement of Science},
 title = {{Early human dispersals within the Americas}},
-url = {http://science.sciencemag.org/content/early/2018/11/07/science.aav2621},
 year = {2018}
 }
 @article{Gao2018,
@@ -258,7 +242,6 @@ month = {may},
 pages = {327098},
 publisher = {Cold Spring Harbor Laboratory},
 title = {{Overlooked roles of DNA damage and maternal age in generating human germline mutations}},
-url = {https://www.biorxiv.org/content/early/2018/05/22/327098},
 year = {2018}
 }
 @article{Moorjani2016,
@@ -273,7 +256,6 @@ number = {10},
 pages = {e2000744},
 publisher = {Public Library of Science},
 title = {{Human Germline Mutation and the Erratic Evolutionary Clock}},
-url = {http://dx.plos.org/10.1371/journal.pbio.2000744},
 volume = {14},
 year = {2016}
 }
@@ -290,7 +272,6 @@ number = {1},
 pages = {e1002355},
 publisher = {Public Library of Science},
 title = {{Interpreting the Dependence of Mutation Rates on Age and Time}},
-url = {http://dx.plos.org/10.1371/journal.pbio.1002355},
 volume = {14},
 year = {2016}
 }
@@ -307,7 +288,6 @@ number = {7357},
 pages = {493--496},
 publisher = {Nature Publishing Group},
 title = {{Inference of human population history from individual whole-genome sequences}},
-url = {http://www.nature.com/articles/nature10231},
 volume = {475},
 year = {2011}
 }
@@ -323,7 +303,6 @@ number = {7},
 pages = {478--488},
 publisher = {Nature Publishing Group},
 title = {{Understanding what determines the frequency and pattern of human germline mutations}},
-url = {http://www.nature.com/articles/nrg2529},
 volume = {10},
 year = {2009}
 }
@@ -340,7 +319,6 @@ number = {8},
 pages = {919--925},
 publisher = {Nature Publishing Group},
 title = {{Inferring human population size and separation history from multiple genome sequences}},
-url = {http://www.nature.com/articles/ng.3015},
 volume = {46},
 year = {2014}
 }
@@ -353,7 +331,6 @@ month = {nov},
 number = {1},
 pages = {279--301},
 title = {{Migration and Genetic Population Structure with Special Reference to Humans}},
-url = {http://www.annualreviews.org/doi/10.1146/annurev.es.15.110184.001431},
 volume = {15},
 year = {1984}
 }
@@ -370,7 +347,6 @@ pages = {2381--5},
 pmid = {12493913},
 publisher = {American Association for the Advancement of Science},
 title = {{Genetic structure of human populations.}},
-url = {http://www.ncbi.nlm.nih.gov/pubmed/11954565 http://www.ncbi.nlm.nih.gov/pubmed/12493913},
 volume = {298},
 year = {2002}
 }
@@ -385,7 +361,6 @@ number = {5602},
 pages = {2381--2385},
 pmid = {12493913},
 title = {{Genetic Structure of Human Populations}},
-url = {http://www.ncbi.nlm.nih.gov/pubmed/12493913 http://www.sciencemag.org/cgi/doi/10.1126/science.1078311},
 volume = {298},
 year = {2002}
 }
@@ -400,7 +375,6 @@ number = {S1},
 pages = {267--273},
 publisher = {Wiley/Blackwell (10.1111)},
 title = {{THE RATE OF MUTATION OF HUMAN GENES}},
-url = {http://doi.wiley.com/10.1111/j.1601-5223.1949.tb03339.x},
 volume = {35},
 year = {2010}
 }
@@ -417,7 +391,6 @@ number = {10},
 pages = {745--753},
 publisher = {Nature Publishing Group},
 title = {{Revising the human mutation rate: implications for understanding human evolution}},
-url = {http://www.nature.com/articles/nrg3295},
 volume = {13},
 year = {2012}
 }
@@ -431,7 +404,6 @@ month = {nov},
 number = {1},
 pages = {99--125},
 title = {{The Effects of Genetic and Geographic Structure on Neutral Variation}},
-url = {http://www.annualreviews.org/doi/10.1146/annurev.ecolsys.34.011802.132359},
 volume = {34},
 year = {2003}
 }
@@ -447,7 +419,6 @@ number = {6},
 pages = {775--789},
 publisher = {Cell Press},
 title = {{Leveraging Distant Relatedness to Quantify Human Mutation and Gene-Conversion Rates}},
-url = {https://www.sciencedirect.com/science/article/pii/S0002929715004085},
 volume = {97},
 year = {2015}
 }
@@ -463,7 +434,6 @@ number = {5},
 pages = {809--822},
 publisher = {Cell Press},
 title = {{Length Distributions of Identity by Descent Reveal Fine-Scale Demographic History}},
-url = {https://www.sciencedirect.com/science/article/pii/S0002929712004727},
 volume = {91},
 year = {2012}
 }
@@ -480,7 +450,6 @@ number = {10},
 pages = {e1000695},
 publisher = {Public Library of Science},
 title = {{Inferring the Joint Demographic History of Multiple Populations from Multidimensional SNP Frequency Data}},
-url = {https://dx.plos.org/10.1371/journal.pgen.1000695},
 volume = {5},
 year = {2009}
 }
@@ -497,7 +466,6 @@ pages = {17758--64},
 pmid = {23077256},
 publisher = {National Academy of Sciences},
 title = {{The great human expansion.}},
-url = {http://www.ncbi.nlm.nih.gov/pubmed/23077256 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC3497766},
 volume = {109},
 year = {2012}
 }
@@ -514,7 +482,6 @@ pages = {11983--8},
 pmid = {21730125},
 publisher = {National Academy of Sciences},
 title = {{Demographic history and rare allele sharing among human populations.}},
-url = {http://www.ncbi.nlm.nih.gov/pubmed/21730125 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC3142009},
 volume = {108},
 year = {2011}
 }
@@ -531,7 +498,6 @@ pages = {15942--7},
 pmid = {16243969},
 publisher = {National Academy of Sciences},
 title = {{Support from the relationship of genetic and geographic distance in human populations for a serial founder effect originating in Africa.}},
-url = {http://www.ncbi.nlm.nih.gov/pubmed/16243969 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC1276087},
 volume = {102},
 year = {2005}
 }
@@ -564,7 +530,6 @@ author = {Belsare, Saurabh and Sakin-Levy, Michal and Mostovoy, Yulia and Durinc
 journal = {bioRxiv},
 month = {jan},
 title = {{Evaluating the quality of the 1000 Genomes Project data}},
-url = {http://biorxiv.org/content/early/2018/08/03/383950.abstract},
 year = {2018}
 }
 @article{Ebejer2013,
@@ -611,7 +576,6 @@ author = {Aikens, Rachael C and Johnson, Kelsey E and Voight, Benjamin F},
 journal = {bioRxiv},
 month = {jan},
 title = {{Signals of variation in human mutation rate at multiple levels of sequence context}},
-url = {http://biorxiv.org/content/early/2018/08/04/385096.abstract},
 year = {2018}
 }
 @article{Benjamini2006,
@@ -683,7 +647,6 @@ number = {9},
 pages = {418--426},
 pmid = {25108476},
 title = {{Ten years of next-generation sequencing technology}},
-url = {http://linkinghub.elsevier.com/retrieve/pii/S0168952514001127},
 volume = {30},
 year = {2014}
 }
@@ -746,7 +709,6 @@ number = {7063},
 pages = {1299--320},
 pmid = {16255080},
 title = {{A haplotype map of the human genome.}},
-url = {http://www.ncbi.nlm.nih.gov/pubmed/16255080},
 volume = {437},
 year = {2005}
 }
@@ -765,7 +727,6 @@ number = {7319},
 pages = {1061--73},
 pmid = {20981092},
 title = {{A map of human genome variation from population-scale sequencing.}},
-url = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=3042601{\&}tool=pmcentrez{\&}rendertype=abstract},
 volume = {467},
 year = {2010}
 }
@@ -850,7 +811,6 @@ number = {11},
 pages = {3439--3444},
 pmid = {25733855},
 title = {{Evidence for recent, population-specific evolution of the human mutation rate}},
-url = {http://www.pnas.org/lookup/doi/10.1073/pnas.1418652112},
 volume = {112},
 year = {2015}
 }
@@ -873,7 +833,6 @@ year = {2017}
     year = {2016},
     month = {05},
     volume = {12},
-    url = {https://doi.org/10.1371/journal.pgen.1006059},
     pages = {1-27},
     abstract = {Author Summary Genetic studies of African-Americans identify functional variants, elucidate historical and genealogical mysteries, and reveal basic biology. However, African-Americans have been under-represented in genetic studies, and relatively little is known about nation-wide patterns of genomic diversity in the population. Here, we study African-American genomic diversity using genotype data from nationally and regionally representative cohorts. Access to these unique cohorts allows us to clarify the role of population structure, admixture, and recent massive migrations in shaping African-American genomic diversity and sheds new light on the genetic history of this population.},
     number = {5},
@@ -892,7 +851,6 @@ pages="317",
 abstract="The rate of mutation at which the gene for haemophilia appears in the population of London is estimated at about once in 50,000 human life cycles. There are probably two distinct allelomorphs at the same locus, the milder type arising less frequently by mutation than the severe type.",
 issn="0022-1333",
 doi="10.1007/BF02982403",
-url="https://doi.org/10.1007/BF02982403"
 }
 @article {Takahata1997,
 	author = {Takahata, Naoyuki and Satta, Yoko},
@@ -905,8 +863,6 @@ url="https://doi.org/10.1007/BF02982403"
 	publisher = {National Academy of Sciences},
 	abstract = {To date major divergences that occurred in the primate lineage leading to modern humans and to infer a demographic parameter (effective population size) of the ancestral lineage that existed at each divergence, a maximum likelihood method was applied to autosomal DNA sequence data currently available for pairs of orthologous genes between the human and each of the chimpanzee, gorilla, Old World monkey (OWM), and New World monkey (NWM). A statistical test is carried out to support the assumption that silent substitutions have accumulated in a clock-like fashion over loci between primate taxa or even among sites within a locus. It is shown that the human ancestral lineage became distinct from the NWM 57.5 million years (Myr) ago, the OWM 31 Myr ago, the gorilla 8.0 Myr ago, and the chimpanzee 4.5 Myr ago, and that the effective population size at these divergences was generally much greater than that of modern humans. It is argued that the human ancestral lineage branched off from the NWM and OWM earlier than once thought and that significant demographic changes might have occurred at different evolutionary stages, particularly at the hominid stage. NWM,New World monkey;OWM,Old World monkey;ML,maximum likelihood;Myr,million years},
 	issn = {0027-8424},
-	URL = {http://www.pnas.org/content/94/9/4811},
-	eprint = {http://www.pnas.org/content/94/9/4811.full.pdf},
 	journal = {Proceedings of the National Academy of Sciences}
 }
 @article {Shendure2015,
@@ -920,8 +876,6 @@ url="https://doi.org/10.1007/BF02982403"
 	publisher = {American Association for the Advancement of Science},
 	abstract = {Germline mutations are the principal cause of heritable disease and the ultimate source of evolutionary change. Similarly, somatic mutations are the primary cause of cancer and may contribute to the burden of human disease more broadly than previously appreciated. Here, we review recent insights into the rates, spectrum, and determinants of genomic mutations and how these parameters inform our understanding of both Mendelian and complex human diseases. We also consider models for conceptualizing mutational consequences and outline several key areas for future research, including the development of new technologies to access and quantify the full spectrum of mutations, as well as to better interpret the consequences of mutations with respect to molecular functionality, evolutionary fitness, and disease pathogenicity.},
 	issn = {0036-8075},
-	URL = {http://science.sciencemag.org/content/349/6255/1478},
-	eprint = {http://science.sciencemag.org/content/349/6255/1478.full.pdf},
 	journal = {Science}
 }
 @article{mcinnes2018umap,
@@ -932,7 +886,7 @@ url="https://doi.org/10.1007/BF02982403"
 }
 @article{diaz2018,
   title={Revealing multi-scale population structure in large cohorts},
-  author={Diaz-Papkovich, Alex and Anderson-Trocme, Luke and Gravel, Simon},
+  author={Diaz-Papkovich, Alex and Anderson-Trocm\'e, Luke and Gravel, Simon},
   journal={bioRxiv},
   pages={423632},
   year={2018},
